--- a/qlthucung/wwwroot/Content/css1/Adminstyle.css
+++ b/qlthucung/wwwroot/Content/css1/Adminstyle.css
@@ -464,3 +464,8 @@ i.fa.fa-chevron-right.next.slick-arrow2 {
 .elementor-element.elementor-element-afdce65 .elementor-icon-box-wrapper {
     text-align: left;
 }
+
+footer #contact p {
+    text-align: left;
+    padding-inline: inherit;
+}
