--- a/qlthucung/wwwroot/Content/css1/styles.css
+++ b/qlthucung/wwwroot/Content/css1/styles.css
@@ -3169,9 +3169,7 @@ textarea.form-control-lg {
 }
 
 .btn:hover {
-    color: var(--bs-btn-hover-color);
-    background-color: var(--bs-btn-hover-bg);
-    border-color: var(--bs-btn-hover-border-color);
+    color: gray;
 }
 
 .btn-check + .btn:hover {
