--- a/qlthucung/Views/Cart/DatHangThanhCong.cshtml
+++ b/qlthucung/Views/Cart/DatHangThanhCong.cshtml
@@ -4,14 +4,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="body" style="margin-top: 50px;">
-    <center style="height: 300px; padding-top: 10px;">
-        <h1 class="text-success">Đặt Hàng Thành Công!</h1>
+<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="~/Content/css/style.min.css" />
+
+<div class="body pt-5 pb-2" style="margin-top: 50px; padding-inline: 10px;">
+    <center class="pb-5">
+        <h1 style="color: coral">Đặt Hàng Thành Công!</h1>
         <h2>Đơn hàng đang được xác nhận</h2>
         <h3>Chúng tôi sẽ giao hàng cho bạn sớm nhất có thể !</h3>
     </center>
 
-    <a asp-controller="SanPham" asp-action="index">
+    <a class="btn btn-danger" style="color: #fff; background-color: coral; border-color: coral;" asp-controller="Home" asp-action="Index">
         Về trang chủ
     </a>
 </div>
