--- a/qlthucung/Views/SanPham/Index.cshtml
+++ b/qlthucung/Views/SanPham/Index.cshtml
@@ -6,8 +6,6 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="~/Content/css/style.min.css" />
 <div class="post-slider">
-    <i class="fa fa-chevron-left prev" aria-hidden="true"></i>
-    <i class="fa fa-chevron-right next" aria-hidden="true"></i>
 
     <div class="post-wrapper">
         <div class="post">
@@ -31,8 +29,6 @@
     </div>
 
     <div class="post-slider2">
-        <i class="fa fa-chevron-left prev2" aria-hidden="true"></i>
-        <i class="fa fa-chevron-right next2" aria-hidden="true"></i>
 
         <div class="row mt-0 pt-0">
             <div class="post-wrapper2 mt-0 pt-0">
@@ -132,7 +128,7 @@
 </div>
 
 <!-- Tất cả sản phẩm -->
-<div class="body pt-5 pb-4">
+<div class="body p-1 pt-5 pb-4">
     <div class="body__mainTitle" style="display: flex; justify-content: space-between;">
         <h2>TẤT CẢ SẢN PHẨM</h2>
     </div>
@@ -207,7 +203,7 @@
 </div>
 <!-- End Tất cả sản phẩm -->
 <!-- Sản phẩm cho chó -->
-<div class="body pt-5 pb-4">
+<div class="body p-1 pt-5 pb-4">
 
     <div class="row body__mainTitle d-flex align-items-center">
         <h2 class="col-md-6 text-left">Sản phẩm dành cho chó</h2>
@@ -409,7 +405,7 @@
 </div>
 
 <!-- Sản phẩm cho mèo -->
-<div class="body pt-5 pb-4">
+<div class="body p-1 pt-5 pb-4">
 
     <div class="row body__mainTitle d-flex align-items-center">
         <h2 class="col-md-6 text-left">Sản phẩm dành cho mèo</h2>
