--- a/qlthucung/Views/Shared/_Layout.cshtml
+++ b/qlthucung/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
     <link href="~/Content/css1/Adminstyle.css" rel="stylesheet" />
 </head>
 <body id="page-top">
-    <header class="header">x
+    <header class="header">
         <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-black d-flex" id="mainNav">
             <div class="container pr-1">
                 <a class="navbar-brand text-center" href="/">Shoppet</a>
@@ -33,8 +33,8 @@
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse pr-1" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="navbar-brand pr-2 text-center" id="formSearch">
+                    <ul class="justify-content-center ms-auto navbar-nav py-4 py-lg-0 text-uppercase">
+                        <li class="navbar-brand text-center" id="formSearch">
                             <form method="get" asp-controller="SanPham" asp-action="Search" class="navbar_search">
                                 <input class="search" id="message" name="search" placeholder="Nhập để tìm kiếm" type="text" value="">
                                 <i class="fa fa-search" id="searchBtn" type="submit" style="color:coral"></i>
@@ -47,15 +47,15 @@
                         <li class="nav-item"><a class="nav-link" href="#Thongtin">Thông tin</a></li>
                         <li class="nav-item"><a class="nav-link" href="http://localhost:28241/#Lienhe">Liên hệ</a></li>
                         <li style="display: flex; align-items: center;">
-                            <div class="login pr-3 pl-2" id="loginClick">
+                            <div class="login pl-2" id="loginClick">
                                 @if (User.Identity.IsAuthenticated)
                                 {
-                                    <span>
+                                    <span class="d-flex">
                                         @User.Identity.Name &nbsp;<i class="fa-solid fa-chevron-down"></i>
 
                                     </span>
 
-                                    <ul class="login_list position-absolute">
+                                    <ul class="login_list">
                                         <li><a href="http://localhost:28241/Shared/profile">Thông tin cá nhân</a></li>
                                         @if (@User.Identity.Name == "Admin")
                                         {
@@ -79,7 +79,7 @@
                                     </div>
                                 }
                             </div>
-                            <div class="login pr-2 pl-3">
+                            <div class="login pr-3 pl-3">
                                 <a class="navbar__shoppingCart getstarted scrollto active" asp-controller="cart" asp-action="Index" style="font-weight:bold;text-decoration:none;display: inline-flex;align-items: center;position:relative;">
 
                                     <svg width="24px" viewBox="0 0 24.00 24.00" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff" transform="matrix(1, 0, 0, 1, 0, 0)rotate(0)" stroke-width="0.672">
@@ -116,147 +116,11 @@
 
     @RenderBody()
     
-    <footer class="text-center bg-dark text-muted" id="Thongtin">
-        <!-- Section: Social media -->
-        <section class="d-flex justify-content-center justify-content-lg-between borderhead">
-            <!-- Left -->
-            <div class="ml-2 d-none d-lg-block textlogo">
-                <a class="navbar-brand" href="#page-top">Shoppet</a>
-            </div>
-            <!-- Left -->
-            <!-- Right -->
-            <div>
-                <!-- Facebook -->
-                <a class="btn text-white btn-floating m-1"
-                   style="background-color: #3b5998;"
-                   href="#!"
-                   role="button">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-
-                <!-- Twitter -->
-                <a class="btn text-white btn-floating m-1"
-                   style="background-color: #55acee;"
-                   href="#!"
-                   role="button">
-                    <i class="fab fa-twitter"></i>
-                </a>
-
-                <!-- Google -->
-                <a class="btn text-white btn-floating m-1"
-                   style="background-color: #dd4b39;"
-                   href="#!"
-                   role="button">
-                    <i class="fab fa-google"></i>
-                </a>
-
-                <!-- Instagram -->
-                <a class="btn text-white btn-floating m-1"
-                   style="background-color: #ac2bac;"
-                   href="#!"
-                   role="button">
-                    <i class="fab fa-instagram"></i>
-                </a>
-
-                <!-- Linkedin -->
-                <a class="btn text-white btn-floating m-1"
-                   style="background-color: #0082ca;"
-                   href="#!"
-                   role="button">
-                    <i class="fab fa-linkedin-in"></i>
-                </a>
-                <!-- Github -->
-                <a class="btn text-white btn-floating m-1"
-                   style="background-color: #333333;"
-                   href="#!"
-                   role="button">
-                    <i class="fab fa-github"></i>
-                </a>
-            </div>
-            <!-- Right -->
-        </section>
-        <!-- Section: Social media -->
-        <!-- Section: Links  -->
-        <section>
-            <div class="container text-center text-md-start mt-5" id="contact">
-                <!-- Grid row -->
-                <div class="row">
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto">
-                        <!-- Content -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            <i class="fas fa-gem me-3"></i>Company name
-                        </h6>
-                        <p class="text-justify">
-                            Here you can use rows and columns to organize your footer content. Lorem ipsum
-                            dolor sit amet, consectetur adipisicing elit.
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Products
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Angular</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">React</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Vue</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Laravel</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Useful links
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Pricing</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Settings</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Orders</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Help</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-                    <!-- Grid column -->
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                        <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-                        <p>
-                            <i class="fas fa-envelope me-3"></i>
-                            info@example.com
-                        </p>
-                        <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                        <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-                    </div>
-                    <!-- Grid column -->
-                </div>
-                <!-- Grid row -->
-            </div>
-        </section>
-        <!-- Section: Links  -->
-        <!-- Copyright -->
+    <footer class="text-center bg-black text-muted" id="Thongtin">
         <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
             Design by:
             <a class="text-reset fw-bold" href="https://mdbootstrap.com/">Phạm Quang Đạt and Dương Thu Hà</a>
         </div>
-        <!-- Copyright -->
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
