--- a/qlthucung/wwwroot/Content/css1/styles.css
+++ b/qlthucung/wwwroot/Content/css1/styles.css
@@ -7563,9 +7563,9 @@ textarea.form-control-lg {
 }
 
 .fixed-top {
-    position: fixed;
-    top: 0;
+    position: relative;
     right: 0;
+    top: -25px;
     left: 0;
     z-index: 1030;
 }
