--- a/qlthucung/Views/Shared/_Layout.cshtml
+++ b/qlthucung/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 </head>
 <body id="page-top">
     <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-black d-flex" id="mainNav">
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-black d-flex" id="mainNav" style="padding-inline: 1rem;">
             <div class="container pr-1">
                 <a class="navbar-brand text-center" href="/">Shoppet</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,6 @@
                         <li class="nav-item"><a class="nav-link" href="http://localhost:28241/SanPham">Sản phầm</a></li>
                         <li class="nav-item"><a class="nav-link" href="http://localhost:28241/DichVu">Dịch vụ</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Tintuc">Tin tức</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#Thongtin">Thông tin</a></li>
                         <li class="nav-item"><a class="nav-link" href="http://localhost:28241/#Lienhe">Liên hệ</a></li>
                         <li style="display: flex; align-items: center;">
                             <div class="login pl-2" id="loginClick">
