--- a/qlthucung/wwwroot/Content/css1/Adminstyle.css
+++ b/qlthucung/wwwroot/Content/css1/Adminstyle.css
@@ -106,7 +106,6 @@
 		display: block !important;
 		flex-basis: auto;
 		animation-timing-function: ease-out;
-		padding-left: 20px;
 	}
 }
 
@@ -124,6 +123,11 @@
 	white-space: nowrap;
 }
 
+.navbar {
+	width: 96%;
+	margin-right: 1rem;
+}
+
 .navbar > .container, .navbar > .container-fluid {
 	justify-content: space-around;
 }
@@ -137,6 +141,9 @@
 #mainNav .navbar-brand {
 	font-family: 'Dancing Script', cursive;
 	color: var( --bs-navbar-brand-color);
+}
+#mainNav .navbar-nav li {
+	width: 75%;
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
