--- a/qlthucung/Views/Security/Register.cshtml
+++ b/qlthucung/Views/Security/Register.cshtml
@@ -23,7 +23,7 @@
                             <span class="justify-content-between">Đăng ký</span>
                         </h3>
                         <div class="col-md-12 col-lg-12 col-sm-12 d-flex pt-2" style="position: relative;">
-                            <div class="m-auto text-center div-light align-items-center">
+                            <div class="m-auto text-center div-light align-items-center w-100">
                                 <span class="justify-content-between">Đăng ký tài khoản</span>
                             </div>
                         </div>
@@ -36,7 +36,7 @@
                                 <input type="text" asp-for="FullName" class="form-control" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="FullName" class="text-danger"></span>
+                                <span asp-validation-for="FullName" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
@@ -48,7 +48,7 @@
                                 <input type="text" asp-for="UserName" class="form-control" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="UserName" class="text-danger"></span>
+                                <span asp-validation-for="UserName" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
@@ -60,7 +60,7 @@
                                 <input type="password" asp-for="Password" class="form-control" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="Password" class="text-danger"></span>
+                                <span asp-validation-for="Password" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
@@ -72,7 +72,7 @@
                                 <input type="password" asp-for="ConfirmPassword" class="form-control" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                                <span asp-validation-for="ConfirmPassword" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
@@ -84,7 +84,7 @@
                                 <input type="email" asp-for="Email" class="form-control" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="Email" class="text-danger"></span>
+                                <span asp-validation-for="Email" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
@@ -96,7 +96,7 @@
                                 <input type="date" class="form-control" asp-for="BirthDate" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="BirthDate" class="text-danger"></span>
+                                <span asp-validation-for="BirthDate" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
