--- a/qlthucung/Views/Security/SignIn.cshtml
+++ b/qlthucung/Views/Security/SignIn.cshtml
@@ -25,7 +25,7 @@
 
                         <h3 class="heading text-center">Đăng nhập</h3>
                         <div class="col-md-12 col-lg-12 col-sm-12 d-flex pt-2" style="position: relative;">
-                            <div class="m-auto text-center div-light align-items-center">
+                            <div class="m-auto text-center div-light align-items-center w-100">
                                 <span class="justify-content-between">Đăng nhập tài khoản</span>
                             </div>
                         </div>
@@ -33,7 +33,7 @@
                         @* <h4 class="text-danger">@ViewBag.msg</h4>
                         <h4 class="text-danger"> @ViewData["blockAccount"]</h4> *@
 
-                        <div class="form-group pt-5">
+                        <div class="form-group" style="padding-top: 4rem;">
                             <div class="css-vivg1i e1xsindi4">
                                 <label for="Fullname" class="form-label col-form-label d-flex text-dark">
                                     <span class="pl-3">Tên tài khoản</span>
@@ -41,7 +41,7 @@
                                 <input type="text" asp-for="UserName" class="form-control" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="UserName" class="text-danger"></span>
+                                <span asp-validation-for="UserName" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
@@ -53,7 +53,7 @@
                                 <input type="password" asp-for="Password" class="form-control" />
                             </div>
                             <span class="form-message">
-                                <span asp-validation-for="Password" class="text-danger"></span>
+                                <span asp-validation-for="Password" class="text-danger fa-2xs"></span>
                             </span>
                         </div>
 
@@ -69,8 +69,8 @@
                         </div>
 
                         <div class="form-group dont-have-account text-center">
-                            <span>Bạn chưa có tài khoản?</span>
-                            <a class="account-register" asp-controller="Security" asp-action="Register">Đăng ký ngay</a>
+                            <span class="text-center">Bạn chưa có tài khoản?</span>
+                            <a class="account-register text-center" asp-controller="Security" asp-action="Register">Đăng ký ngay</a>
                         </div>
                     </form>
                 </div>
