--- a/qlthucung/wwwroot/Content/cssSecurity/style.css
+++ b/qlthucung/wwwroot/Content/cssSecurity/style.css
@@ -42,7 +42,7 @@
 	box-sizing: border-box;
 	box-sizing: border-box;
 	list-style: none;
-	text-align: justify;
+	text-align: center;
 }
 
 html {
@@ -11239,6 +11239,7 @@ a.text-warning:hover, a.text-warning:focus {
 .text-danger {
 	color: #F44336 !important;
 	padding-inline: 20px;
+	font-size: small;
 }
 
 a.text-danger:hover, a.text-danger:focus {
@@ -11503,7 +11504,6 @@ h1, h2, h3, h4, h5,
 
 .form-group {
 	position: relative;
-	padding-block: 3px;
 }
 
 	.form-group .icon {
