fix: chitietdonhang hoàn tất

--- a/qlthucung/Views/DonHangs/ChiTietDonHang.cshtml
+++ b/qlthucung/Views/DonHangs/ChiTietDonHang.cshtml
@@ -137,7 +137,7 @@
             $('.ViewPrint').printThis({
                 debug: false,               // show the iframe for debugging
                 importCSS: true,            // import parent page css
-                importStyle: false,         // import style tags
+                importStyle: true,         // import style tags
                 printContainer: true,       // print outer container/$.selector
                 loadCSS: "",                // path to additional css file - use an array [] for multiple
                 pageTitle: "",              // add title to print page
