--- a/qlthucung/Views/Cart/Index.cshtml
+++ b/qlthucung/Views/Cart/Index.cshtml
@@ -176,7 +176,7 @@
                         </div>
 
                         <div class="total">
-                            <span style="font-size: 1.7rem; color: coral; font-weight: 600;">Tổng thanh toán</span>
+                            <span style="font-size: 1.7rem; color: coral; font-weight: 600; margin-top: -11px;">Tổng thanh toán</span>
                             <br>
 
                             <div class="product__pride-newPride" style="font-size: 25px;">
